# async-python-sprint-5

./: .dockerignore  .env  .pre-commit-config.yaml  README.md  backend.dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml
src/: alembic.ini  config.py  db.py  events.py  main.py
src/alembic/: env.py
src/alembic/versions/: 6a29360347ab_initial.py  87581d255961_create_file.py  ad50980c7ecf_add_password.py  bc472320efcc_add_password.py  cdf1852f54d8_create_user.py
src/api/: file.py  router.py  users.py
src/core/: config.py
src/models/: __init__.py  db.py  file.py  user.py
